// ============================================
// ChainClip - Database Schema
// ============================================

// ----- Enums -----

Enum project_status {
  draft
  uploading
  uploaded
  preparing
  ready
  rendering
  completed
  failed
}

Enum clip_status {
  uploading
  uploaded
  processing
  ready
  failed
}

Enum asset_kind {
  original_clip
  converted_clip
  scene_candidates
  final_clip
}

Enum storage_provider {
  gcs
  r2
}

Enum job_type {
  convert_clip
  analyze_clip
  render_final
  full_pipeline
}

Enum job_status {
  queued
  running
  succeeded
  failed
}

// ----- Tables -----

Table projects {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  device_id uuid [not null, note: 'ログインなしで端末を識別するID']
  title text
  description text
  edit_config jsonb [note: '選択カット・並び順などの編集設定']
  status project_status [not null, default: 'draft']
  share_slug text [unique, note: '共有URLに使う推測困難なID']
  access_token text [not null, note: 'プロジェクト操作権限の確認用トークン']
  error_phase text [note: 'upload / prepare / render / publish']
  error_code text
  error_message text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    device_id
  }
}

Table project_clips {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id, delete: cascade]
  clip_index integer [not null, note: 'アップロード順']
  original_filename text [not null]
  content_type text [note: 'video/mp4, video/quicktime など']
  size_bytes bigint
  duration_ms integer [note: '変換後動画の長さ。ffprobeで取得']
  width integer [note: '変換後動画の幅。ffprobeで取得']
  height integer [note: '変換後動画の高さ。ffprobeで取得']
  status clip_status [not null, default: 'uploading']
  error_code text
  error_message text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table project_assets {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id, delete: cascade]
  clip_id uuid [ref: > project_clips.id, delete: cascade, note: 'クリップに紐づかない場合はNULL']
  kind asset_kind [not null]
  storage_provider storage_provider [not null]
  bucket text [not null]
  object_key text [not null]
  public_url text [note: 'R2完成動画等の公開URL']
  content_type text
  size_bytes bigint
  created_at timestamptz [not null, default: `now()`]
}

Table processing_jobs {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id, delete: cascade]
  clip_id uuid [ref: > project_clips.id, delete: cascade, note: 'クリップ単位でない処理はNULL']
  job_type job_type [not null]
  status job_status [not null, default: 'queued']
  attempt integer [not null, default: 1]
  cloud_run_execution_name text [note: 'GCP実行ログとの紐付け用']
  error_code text
  error_message text
  started_at timestamptz
  finished_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}
